--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.4.4",
     "nodemon": "^2.0.19",
-    "stripe": "^9.13.0"
+    "stripe": "^9.13.0",
+    "cors": "^2.8.5"
   }
 }
