--- a/api/package.json
+++ b/api/package.json
@@ -10,13 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "crypto-js": "^4.1.1",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1",
+    "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.4.4",
-    "nodemon": "^2.0.19",
-    "stripe": "^9.13.0",
-    "cors": "^2.8.5"
+    "mongoose": "^6.0.5",
+    "nodemon": "^2.0.12",
+    "stripe": "^8.174.0"
   }
 }
